--- a/style_index.css
+++ b/style_index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani&family=Ubuntu:ital,wght@0,400;1,300&display=swap');
+
+
 /* Reset All */
 
 *{
@@ -12,9 +15,16 @@ body{
     background: linear-gradient(90deg, #cba565 0%, #f6cd8b 35%, #ffe9a5 100%)
 }
 
-#intro{
-    /* background: #cba565; */
+caption{
+    color: #582c19;
+    
+    font-style: bold;
+    padding-left: 4%;
+    padding-top: 4%;
+    margin-bottom: 4%;
+    font-family: 'Rajdhani', sans-serif;
 }
+
 
 nav #about{
     margin-left: 16px;
@@ -24,7 +34,7 @@ nav #about{
 nav a{
     color: #582C19;
     font-size: large;
-
+    font-family: 'Ubuntu', sans-serif;
     padding: 20px;
     text-decoration: none;
 }
@@ -37,7 +47,9 @@ nav a:hover{
 video{
     width: 100%;
     height: 80vh;
-    margin: 80px;
+    /* margin-top: 0; */
+    margin-left: 80px;
+    margin-right: 80px;
 }
 
 /* ID SELECTORS */
@@ -47,12 +59,24 @@ video{
 }
 
 #aboutMe{
+    font-family: 'Rajdhani', sans-serif;
+    line-height: 1.8em;
+    font-size: larger;
     padding-left: 20vh; 
     padding-top: 50px; 
     color: #ffe9a5; 
     font-style: italic; 
     font-weight: bolder;
 }
+
+#location{
+    width: 100%; 
+    height: 100px; 
+    background-color:  #ffe9a5; 
+    padding-top: 30px; 
+    padding-bottom: 30px;
+}
+
 
 #picture{
     border-radius: 50%; 
@@ -65,4 +89,16 @@ video{
     padding-top: 30px;
 }
 
+#footer{
+    width: 25%;
+    padding-top: 2%;
+    padding-bottom: 1%;
+}
 /* CLASS SELECTORS */
+.location_info{
+    font-family: 'Rajdhani', sans-serif;
+    line-height: 1.8em;    
+    padding-left: 20vh; 
+    font-weight: bolder; 
+    color: #cba565;
+}
