--- a/style_about.css
+++ b/style_about.css
@@ -51,9 +51,20 @@ nav a:hover {
 /* ID SELECTORS */
 
 #footer{
-    width: 25%;
+    width: 100%;
     padding-top: 2%;
-    padding-bottom: 1%;
+    
+}
+
+#map iframe{
+    margin-left: 40%;
+    width: 40%;
+    height: 40%;
+}
+
+#td_map{
+    /* width: 100%; */
+    padding-right: 16px;
 }
 
 #qoute {
