--- a/style_contact.css
+++ b/style_contact.css
@@ -57,8 +57,20 @@ nav a:hover{
 }
 
 #footer{
-    width: 40%;
+    width: 100%;
     padding-top: 2px;
+}
+
+
+#map iframe{
+    margin-left: 40%;
+    width: 40%;
+    height: 40%;
+}
+
+#td_map{
+    /* width: 100%; */
+    padding-right: 16px;
 }
 
 /* CLASS SELECTORS */
